# PO

./: .gitignore  CMakeLists.txt  CialoNiebieskie.cpp  CialoNiebieskie.h  Gwiazda.cpp  Gwiazda.h  GwiazdaZdegradowana.cpp  GwiazdaZdegradowana.h  GwiazdaZyjaca.cpp  GwiazdaZyjaca.h  Main.cpp  Planeta.cpp  Planeta.h  PlanetaGazowa.cpp  PlanetaGazowa.h  PlanetaSkalista.cpp  PlanetaSkalista.h  Planetoida.cpp  Planetoida.h  UkladPlanetarny.cpp  UkladPlanetarny.h  Vec2.cpp  Vec2.h
